Fix #1275, avoid cut off feedback
Reapplication of PR #1476

--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -448,6 +448,9 @@ a#lexicon {
 #header-title .utterance {
   font-style: italic;
   white-space: normal;
+  white-space: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 #feedback-whats-wrong {
